--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <!-- Feature item-->
                         <div class="text-center">
                             <i class="bi-pencil-square icon-feature text-gradient d-block mb-3"></i>
-                            <h3 class="font-alt">Get started</h3>
+                            <h3 class="">Get started</h3>
                             <p class="text-muted mb-0">You are just a phone call away from the solution of your debts. <br><a href="/#contact" class="nav-link">Book a call now.</a></p>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                         <!-- Feature item-->
                         <div class="text-center">
                             <i class="bi-chat-right-text icon-feature text-gradient d-block mb-3"></i>
-                            <h3 class="font-alt">Speak to an expert</h3>
+                            <h3 class="">Speak to an expert</h3>
                             <p class="text-muted mb-0">Put an image, video, animation, or anything else in the screen!</p>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         <!-- Feature item-->
                         <div class="text-center">
                             <i class="bi-check2-square icon-feature text-gradient d-block mb-3"></i>
-                            <h3 class="font-alt">Choose your plan</h3>
+                            <h3 class="">Choose your plan</h3>
                             <p class="text-muted mb-0">As always, this theme is free to download and use for any purpose!</p>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                         <!-- Feature item-->
                         <div class="text-center">
                             <i class="bi-emoji-smile icon-feature text-gradient d-block mb-3"></i>
-                            <h3 class="font-alt">Have a peaceful life again</h3>
+                            <h3 class="">Have a peaceful life again</h3>
                             <p class="text-muted mb-0">An affordable monthly payment to make the payment easy for you.</p>
                         </div>
                     </div>
@@ -143,10 +143,11 @@
         </section>
         <!-- Ratings -->
         <section class="bg-gradient-primary-to-secondary" id="ratings">
-            <div class="container p-4 mx-auto bg-light">
+            <div class="container p-4 mx-auto">
                 <!-- <h3 class="text-center text-primary font-alt mb-4">Best in class rating</h3> -->
-                <div class="row justify-content-center text-center mt-3">
-                    <div class="col-md-3 m-1">
+                <div class="row justify-content-center text-center mt-3 lead">
+                    <div class="col-lg-3 p-4 m-2 card">
+                        <i class="bi bi-patch-question icon-feature text-gradient"></i>
                         <div class="d-flex justify-content-center">
                             <i class="bi bi-star-fill text-gradient"></i>
                             <i class="bi bi-star-fill text-gradient"></i>
@@ -156,7 +157,8 @@
                         </div>
                         <p>Query resolution</p>
                     </div>
-                    <div class="col-md-3 m-1">
+                    <div class="col-lg-3 p-4 card m-2">
+                        <i class="bi bi-person-check icon-feature text-gradient"></i>
                         <div class="d-flex justify-content-center">
                             <i class="bi bi-star-fill text-gradient"></i>
                             <i class="bi bi-star-fill text-gradient"></i>
@@ -166,7 +168,8 @@
                         </div>
                         <p>Customer support</p>
                     </div>
-                    <div class="col-md-3 m-1">
+                    <div class="col-lg-3 p-4 card m-2">
+                        <i class="bi bi-graph-up icon-feature text-gradient"></i>
                         <div class="d-flex justify-content-center">
                             <i class="bi bi-star-fill text-gradient"></i>
                             <i class="bi bi-star-fill text-gradient"></i>
@@ -183,11 +186,11 @@
         <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-5">
+                    <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4">Enter a new age of debt management</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">After the onset of this digital age we're doing most of the work online. But we are now doing almost everything online. So, why not do your debt management online.</p>
                     </div>
-                    <div class="col-sm-8 col-md-6">
+                    <div class="col-12 col-lg-6">
                         <div class="px-auto px-sm-0"><img class="img-fluid" src="https://media.istockphoto.com/photos/man-using-calculator-picture-id1309118129?b=1&k=20&m=1309118129&s=170667a&w=0&h=GpEJosOsm_-qFLxZ31YA3I8u4UuxaHccyEwWmcXKLbU=" height="900rem" width="900rem" alt="..." /></div>
                     </div>
                 </div>
@@ -275,7 +278,7 @@
                     <div class="col-lg-3 col-md-4">
                         <p class="text-white">BROWSE</p>
                         <ul class="list-unstyled">
-                            <li><a href="/#about">About</a></li>
+                            <li><a href="/about-us.html">About</a></li>
                             <li><a href="/faq.html">FAQ</a></li>
                             <li><a href="/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
