--- a/individual-voluntary-arrangement-iva.html
+++ b/individual-voluntary-arrangement-iva.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="row mt-4 justify-content-center align-items-center">
                         <p class="lead text-center fw-normal">Still got doubts? Get an expert advice. Book a call now!</p>
-                        <div class="col-3 text-center">
+                        <div class="col-lg-4 text-center">
                             <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
                                 <span class="d-flex align-items-center">
                                     <span class="lead fw-normal">Book a call</span>
@@ -95,7 +95,7 @@
                     <div class="col-lg-3 col-md-4">
                         <p class="text-white">BROWSE</p>
                         <ul class="list-unstyled">
-                            <li><a href="/#about">About</a></li>
+                            <li><a href="/about-us.html">About</a></li>
                             <li><a href="/faq.html">FAQ</a></li>
                             <li><a href="/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
