--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -579,7 +579,7 @@
                 <div class="col-lg-3 col-md-4">
                     <p class="text-white">BROWSE</p>
                     <ul class="list-unstyled">
-                        <li><a href="/#about">About</a></li>
+                        <li><a href="/about-us.html">About</a></li>
                         <li><a href="/faq.html">FAQ</a></li>
                         <li><a href="/privacy-policy.html">Privacy Policy</a></li>
                     </ul>
