updated the hero video and spelling mistake coreected

--- a/about-us.html
+++ b/about-us.html
@@ -57,6 +57,7 @@
                 </div>
             </div>
         </section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2164.316894713311!2d-2.1088171738276693!3d57.14873992893813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48840e22fcd9bc7f%3A0x6bff1389a7b2304a!2sAberdeen%20Woolmanhill!5e0!3m2!1sen!2sin!4v1660910532377!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <!-- Call to action section-->
         <section class="cta">
             <div class="cta-content">
@@ -85,7 +86,7 @@
                     </div>
                     <div class="col-lg-3 col-md-4">
                         <p class="text-light">ABOUT US</p>
-                        <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in colaboration with different companies and organisations.</p>
+                        <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in collaboration with different companies and organisations.</p>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <p class="text-white">DEBT SOLUTIONS</p>
