--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Make Me Debt Free<br>gives a peace of mind.</h1>
-                            <p class="lead fw-normal text-muted mb-5">Do you feel your debts taking your happiness away?<br>Experts at Make Me Debt Free help you by taking care of all the thing on your behalf. So that you can lead a happy life with family.</p>
+                            <h1 class="display-1 lh-1 mb-3">Write off up to 85% of your debts*...</h1>
+                            <p class="lead fw-normal mb-5">Do you feel your debts taking your happiness away?<br>Experts at Make Me Debt Free help you by taking care of all the thing on your behalf. So that you can lead a happy life with family.</p>
                             <!-- <div class="d-flex flex-column flex-lg-row align-items-center"> -->
                                 <!-- <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><div class="d-grid gap-2">
                                   <button type="button" name="" id="" class="btn btn-primary">?</button>
@@ -81,7 +81,7 @@
                             <div class="device-wrapper">
                                 <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
                                     <div class="screen bg-black">
-                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/VN20220816_191116(0).mp4" type="video/mp4" /></video>
+                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/VN20220819_191330.mp4" type="video/mp4" /></video>
                                     </div>
                                 </div>
                             </div>
@@ -285,7 +285,7 @@
                     </div>
                     <div class="col-lg-3 col-md-4">
                         <p class="text-light">ABOUT US</p>
-                        <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in colaboration with different companies and organisations.</p>
+                        <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in collaboration with different companies and organisations.</p>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <p class="text-white">DEBT SOLUTIONS</p>
