--- a/faq.html
+++ b/faq.html
@@ -268,7 +268,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <p class="text-light">ABOUT US</p>
-                    <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in colaboration with different companies and organisations.</p>
+                    <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in collaboration with different companies and organisations.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <p class="text-white">DEBT SOLUTIONS</p>
