about page added

--- a/about-us.html
+++ b/about-us.html
@@ -44,34 +44,41 @@
             </div>
         </nav>
         <!-- Basic features section-->
-        <section class="bg-light">
+        <section id="">
             <div class="container px-5">
-                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-6">
-                        <h2 class="display-4 lh-1 mb-4">Enter a new age of debt management</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">After the onset of this digital age we're doing most of the work online. But we are now doing almost everything online. So, why not do your debt management online.</p>
+                <div class="card px-5 py-4 my-5">
+                    <h1 class='text-center p-4 bg-gradient-primary-to-secondary text-white'>About us</h1>
+                    <h2>We are helping people with debt.</h2>
+                    <p>Money problems can happen to anyone. The truth is that many of us are only an emergency away from a time of financial hardship.</p>
+                    <p>At Make Me Debt Free, we have helped thousands of people get out of severe money problems, and we treat all customers with empathy, understanding and honesty. We tailor our support to your situation and put your interests first.</p>
+                    <p>We offer debt solutions and guidance that change people's lives. And we are there for you every step of the way.</p>
+                </div>
+                <div class="card px-5 py-4 my-3">
+                    <h2>What makes us different</h2>
+                    <p><span class="h5">You'll have our undivided attention:</span> We offer debt help. Whatever you need, whenever you need it, we will be around.</p>
+                    <p><span class='h5'>You'll be more than just a number to us:</span> Our job is to listen to you, recognize your circumstances, and recommend a debt plan that suits your situation.</p>
+                    <p>Still not sure which is the best suitable plan for you? Just <a class='bg-gradient-primary-to-secondary text-white p-1 btn' href="/#contact">book a call</a>. Our advisor will help you choose one for yourself.</p>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-center mt-5">Our location</h2>
                     </div>
-                    <div class="col-12 col-lg-6">
-                        <div class="px-auto px-sm-0"><img class="img-fluid" src="https://media.istockphoto.com/photos/man-using-calculator-picture-id1309118129?b=1&k=20&m=1309118129&s=170667a&w=0&h=GpEJosOsm_-qFLxZ31YA3I8u4UuxaHccyEwWmcXKLbU=" height="900rem" width="900rem" alt="..." /></div>
+                    <div class="col-md-6 col-lg-6 mb-5 card px-5 py-4">
+                        <div class="text-center">
+                            <i class="bi-geo-alt icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="">Address</h3>
+                            <p class="text-muted mb-0">51A, St Rollox Business Park, Glasgow G21 1YL, UK</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6 mb-5">
+                        <div class="">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3654.876182776631!2d-4.2310620000000005!3d55.873196!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48884408828c696b%3A0x57e80c5a1feebcb5!2sCobden%20Rd%2C%20Springburn%20Rd%2C%20Glasgow%20G21%201YL%2C%20UK!5e1!3m2!1sen!2sin!4v1661854898966!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2164.316894713311!2d-2.1088171738276693!3d57.14873992893813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48840e22fcd9bc7f%3A0x6bff1389a7b2304a!2sAberdeen%20Woolmanhill!5e0!3m2!1sen!2sin!4v1660910532377!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <!-- Call to action section-->
-        <section class="cta">
-            <div class="cta-content">
-                <div class="container px-5">
-                    <h2 class="text-white display-1 lh-1">
-                        Stop worrying.
-                        <br>
-                        Let's do it with experts.
-                    </h2>
-                    <p class="text-white">Your tailor made solution is just a phone call away!</p>
-                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="/#contact">Get a call</a>
-                </div>
-            </div>
-        </section>
+
         <!-- Footer-->
         <footer class="bg-black py-5">
             <div class="container px-5">
