--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <div class="device-wrapper">
                                 <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
                                     <div class="screen bg-black">
-                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/VN20220819_191330.mp4" type="video/mp4" /></video>
+                                        <iframe class="" title="video" style="height: 100%; max-width:100%" src="//player.vimeo.com/video/526455816?autoplay=1&amp;muted=true;loop=true;controls=false"></iframe>
                                     </div>
                                 </div>
                             </div>
