about us link added to navbar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="/about-us.html">About us</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="/faq.html">FAQ</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="/privacy-policy.html">Privacy Policy</a></li>
                     </ul>
@@ -205,14 +206,14 @@
                         <br>
                         Let's do it with experts.
                     </h2>
-                    <p class="text-white">Your tailor made solution is just a phone call away!</p>
+                    <p class="text-white h3 font-alt">Your tailor made solution is just a phone call away!</p>
                     <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="/#contact">Get a call</a>
                 </div>
             </div>
         </section>
         <!-- App badge section-->
         <section class="bg-gradient-primary-to-secondary" id="contact">
-            <h2 class="text-center text-white font-alt mb-4">Get a call now!</h2>
+            <h2 class="text-center text-white font-alt mb-4">CHECK YOUR QUALIFICATION</h2>
             <div class="col-lg-5 p-5 mx-auto bg-light">
                 <form id="leadGen" method="post" data-netlify="true">
                     <!-- Name input-->
@@ -253,7 +254,6 @@
                             <option value="4000 - 6000">£4000 - £6000</option>
                             <option value="6000 or more">£6000 or more</option>
                         </select>
-                        
                     </div>
                     <div class="mb-3">
                         <label for="payment-missed">Have you missed any payments?</label>
@@ -271,6 +271,9 @@
                 </form>
             </div>
         </section>
+        <!-- <a href="/#contact" class="floating-button d-flex bg-gradient-primary-to-secondary nav-link text-white">
+            <p class="my-auto h3 p-3 font-alt">Check your <br/>qualification</p>
+        </a> -->
         <!-- Footer-->
         <footer class="bg-black py-5">
             <div class="container px-5">
