--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@
         <!-- Basic features section-->
         <section id="">
             <div class="container px-5">
-                <div class="card px-5 py-4 my-5">
+                <div class="px-5 py-4 my-5">
                     <h1 class='text-center p-4 bg-gradient-primary-to-secondary text-white'>About us</h1>
                     <h2>We are helping people with debt.</h2>
                     <p>Money problems can happen to anyone. The truth is that many of us are only an emergency away from a time of financial hardship.</p>
@@ -55,10 +55,10 @@
                     <p>We offer debt solutions and guidance that change people's lives. And we are there for you every step of the way.</p>
                 </div>
                 <div class="card px-5 py-4 my-3">
-                    <h2>What makes us different</h2>
+                    <h2  class="text-center">What makes us different</h2>
                     <p><span class="h5">You'll have our undivided attention:</span> We offer debt help. Whatever you need, whenever you need it, we will be around.</p>
                     <p><span class='h5'>You'll be more than just a number to us:</span> Our job is to listen to you, recognize your circumstances, and recommend a debt plan that suits your situation.</p>
-                    <p>Still not sure which is the best suitable plan for you? Just <a class='bg-gradient-primary-to-secondary text-white p-1 btn' href="/#contact">book a call</a>. Our advisor will help you choose one for yourself.</p>
+                    <p>Still not sure which is the best suitable plan for you? Just <a class="nav-link d-inline p-0 fw-bold" href="/#contact">book a call</a>. Our advisor will help you choose one for yourself.</p>
                 </div>
 
                 <div class="row">
