--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Write off up to 85% of your debts*...</h1>
-                            <p class="lead fw-normal mb-5">Do you feel your debts taking your happiness away?<br>Experts at Make Me Debt Free help you by taking care of all the thing on your behalf. So that you can lead a happy life with family.</p>
-                            <!-- <div class="d-flex flex-column flex-lg-row align-items-center"> -->
-                                <!-- <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><div class="d-grid gap-2">
-                                  <button type="button" name="" id="" class="btn btn-primary">?</button>
-                                </div></a> -->
-                                <!-- <a href="/#contact"><button class="btn btn-primary">Get a call</button></a> -->
-                            <!-- </div> -->
+                            <p class="lead fw-normal mb-2">Do you feel your debts taking your happiness away?<br>Get a free advice from our experts. So that you can lead a happy life with family.</p>
+                            <div class="d-flex flex-column flex-lg-row align-items-center">
+                                <a class="" href="/#contact"><button class="btn btn-primary">Get a call</button></a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -104,81 +101,81 @@
         </aside>
         <!-- App features section-->
         <section id="features">
-            <div class="container px-5">
-                <div class="row">
-                    <h2 class="text-center text-gradient font-alt mb-4 pb-3">Our Process</h2>
-                    <div class="col-md-6 col-lg-3 mb-5">
+            <div class="container">
+                <div class="row d-flex">
+                    <h2 class="text-center font-alt mb-4 pb-3">Our Process</h2>
+                    <div class="col-md-6 col-lg-3 mb-5 mx-auto">
                         <!-- Feature item-->
                         <div class="text-center">
-                            <i class="bi-pencil-square icon-feature text-gradient d-block mb-3"></i>
+                            <i class="bi-pencil-square icon-feature text-success d-block mb-3"></i>
                             <h3 class="">Get started</h3>
-                            <p class="text-muted mb-0">You are just a phone call away from the solution of your debts. <br><a href="/#contact" class="nav-link">Book a call now.</a></p>
+                            <p class="mb-0">You are just a phone call away from the solution of your debts. <br><a href="/#contact" class="nav-link">Book a call now.</a></p>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3 mb-5">
+                    <div class="col-md-6 col-lg-3 mb-5 mx-auto">
                         <!-- Feature item-->
                         <div class="text-center">
-                            <i class="bi-chat-right-text icon-feature text-gradient d-block mb-3"></i>
+                            <i class="bi-chat-right-text icon-feature text-success d-block mb-3"></i>
                             <h3 class="">Speak to an expert</h3>
-                            <p class="text-muted mb-0">Put an image, video, animation, or anything else in the screen!</p>
+                            <p class="mb-0">Get the best advice according to your circumstances. We tailor solution for yourself.</p>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3 mb-5">
+                    <div class="col-md-6 col-lg-3 mb-5 mx-auto">
                         <!-- Feature item-->
                         <div class="text-center">
-                            <i class="bi-check2-square icon-feature text-gradient d-block mb-3"></i>
+                            <i class="bi-check2-square icon-feature text-success d-block mb-3"></i>
                             <h3 class="">Choose your plan</h3>
-                            <p class="text-muted mb-0">As always, this theme is free to download and use for any purpose!</p>
+                            <p class="mb-0">You can choose your plan based on what your goals are to get the best out of it.</p>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3 mb-5">
+                    <div class="col-md-6 col-lg-3 mb-5 mx-auto">
                         <!-- Feature item-->
                         <div class="text-center">
-                            <i class="bi-emoji-smile icon-feature text-gradient d-block mb-3"></i>
-                            <h3 class="">Have a peaceful life again</h3>
-                            <p class="text-muted mb-0">An affordable monthly payment to make the payment easy for you.</p>
+                            <i class="bi-emoji-smile icon-feature text-success d-block mb-3"></i>
+                            <h3 class="">Back to happiness</h3>
+                            <p class="mb-0">After you choose your plan, an affordable monthly payment will be setup.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Ratings -->
-        <section class="bg-gradient-primary-to-secondary" id="ratings">
+        <section class="bg-primary" id="ratings">
             <div class="container p-4 mx-auto">
                 <!-- <h3 class="text-center text-primary font-alt mb-4">Best in class rating</h3> -->
                 <div class="row justify-content-center text-center mt-3 lead">
                     <div class="col-lg-3 p-4 m-2 card">
-                        <i class="bi bi-patch-question icon-feature text-gradient"></i>
+                        <i class="bi bi-patch-question icon-feature text-primary"></i>
                         <div class="d-flex justify-content-center">
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-half text-gradient"></i>
-                            <i class="bi bi-star text-gradient"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-half text-success"></i>
+                            <i class="bi bi-star text-success"></i>
                         </div>
-                        <p>Query resolution</p>
+                        <p class="h5">Query resolution</p>
                     </div>
                     <div class="col-lg-3 p-4 card m-2">
-                        <i class="bi bi-person-check icon-feature text-gradient"></i>
+                        <i class="bi bi-person-check icon-feature text-primary"></i>
                         <div class="d-flex justify-content-center">
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-half text-gradient"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-half text-success"></i>
                         </div>
-                        <p>Customer support</p>
+                        <p class="h5">Customer support</p>
                     </div>
                     <div class="col-lg-3 p-4 card m-2">
-                        <i class="bi bi-graph-up icon-feature text-gradient"></i>
+                        <i class="bi bi-graph-up icon-feature text-primary"></i>
                         <div class="d-flex justify-content-center">
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star-fill text-gradient"></i>
-                            <i class="bi bi-star text-gradient"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star-fill text-success"></i>
+                            <i class="bi bi-star text-success"></i>
                         </div>
-                        <p>Efficiency rating</p>
+                        <p class="h5">Efficiency rating</p>
                     </div>
                 </div>
             </div>
