--- a/about-us.html
+++ b/about-us.html
@@ -69,12 +69,12 @@
                         <div class="text-center">
                             <i class="bi-geo-alt icon-feature text-gradient d-block mb-3"></i>
                             <h3 class="">Address</h3>
-                            <p class="text-muted mb-0">51A, St Rollox Business Park, Glasgow G21 1YL, UK</p>
+                            <p class="text-muted mb-0">Savoy Tower, 77 Renfrew St, Glasgow G2 3BZ, UK</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 mb-5">
                         <div class="">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3654.876182776631!2d-4.2310620000000005!3d55.873196!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48884408828c696b%3A0x57e80c5a1feebcb5!2sCobden%20Rd%2C%20Springburn%20Rd%2C%20Glasgow%20G21%201YL%2C%20UK!5e1!3m2!1sen!2sin!4v1661854898966!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1562.307865060084!2d-4.256917950658014!3d55.865318798069055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488844212229c391%3A0xdd17d50d6b2449d4!2sClockwise%20Glasgow!5e1!3m2!1sen!2sin!4v1662205378002!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
