added phone details card along with address

--- a/about-us.html
+++ b/about-us.html
@@ -63,7 +63,14 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="text-center mt-5">Our location</h2>
+                        <h2 class="text-center mt-5">Contact us</h2>
+                    </div>
+                    <div class="col-md-6 col-lg-6 mb-5 card px-5 py-4">
+                        <div class="text-center">
+                            <i class="bi-telephone icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="">Call</h3>
+                            <p class="text-muted mb-0">01975805505</p>
+                        </div>
                     </div>
                     <div class="col-md-6 col-lg-6 mb-5 card px-5 py-4">
                         <div class="text-center">
