--- a/about-us.html
+++ b/about-us.html
@@ -69,14 +69,14 @@
                         <div class="text-center">
                             <i class="bi-telephone icon-feature text-gradient d-block mb-3"></i>
                             <h3 class="">Call</h3>
-                            <p class="text-muted mb-0"><a href="tel:01975805505">01975805505</a></p>
+                            <p class=" mb-0"><a href="tel:01975805505" class="nav-link">01975805505</a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 mb-5 card px-5 py-4">
                         <div class="text-center">
                             <i class="bi-geo-alt icon-feature text-gradient d-block mb-3"></i>
                             <h3 class="">Address</h3>
-                            <p class="text-muted mb-0">Savoy Tower, 77 Renfrew St, Glasgow G2 3BZ, UK</p>
+                            <p class=" mb-0">Savoy Tower, 77 Renfrew St, Glasgow G2 3BZ, UK</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 mb-5">
