Update index.html honepot added

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <section class="bg-gradient-primary-to-secondary" id="contact">
             <h2 class="text-center text-white font-alt mb-4">CHECK YOUR QUALIFICATION</h2>
             <div class="col-lg-5 p-5 mx-auto bg-light">
-                <form id="leadGen" method="post" data-netlify="true">
+                <form id="leadGen" method="post" data-netlify="true" netlify-honeypot="bot-field">
                     <!-- Name input-->
                     <div class="mb-3">
                         <label for="name mb-3">Full name</label>
