--- a/about-us.html
+++ b/about-us.html
@@ -69,7 +69,7 @@
                         <div class="text-center">
                             <i class="bi-telephone icon-feature text-gradient d-block mb-3"></i>
                             <h3 class="">Call</h3>
-                            <p class=" mb-0"><a href="tel:01975805505" class="nav-link">01975805505</a></p>
+                            <p class=" mb-0"><a href="tel:+441618265690" class="nav-link">01618265690</a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 mb-5 card px-5 py-4">
@@ -101,7 +101,7 @@
                     </div>
                     <div class="col-lg-3 col-md-4">
                         <p class="text-light">ABOUT US</p>
-                        <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in collaboration with different companies and organisations.</p>
+                        <p class="text-white-50">Make Me Debt Free is a company which provides debt advice and solutions. We are in collaboration with different companies and organisations.</p>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <p class="text-white">DEBT SOLUTIONS</p>
